--- a/donuts/styles.css
+++ b/donuts/styles.css
@@ -6,7 +6,7 @@
     --ColorPink: #FFE8E7;
     --ColorGray: #D7D7D7;
     --ColorVin: #250D28;
-    --ColorBlue: ;
+    --ThreeFont: 'Poppins', sans-serif;;
 }
 
 body{
@@ -25,11 +25,12 @@ nav{
 }
 
 header{
-    background-image: url('img/Backgroundd.png');
+    background-image: url('img/wave-haikei\ \(5\).svg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100rem;
+    height: 80rem;
     width: 100%;
+    margin-bottom: 20rem;
 }
 
 img{
@@ -41,7 +42,7 @@ img{
 }
 
 .a-nav a{
-    color: var(--textWhite);
+    color: var(--purple);
     margin-right: 1.3rem;
 }
 
@@ -375,15 +376,23 @@ button:hover{
 footer{
     background-color: #FFE8E7;
     position: static;
-    height: 30rem;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    font-family: var(--ThreeFont);
+    padding-top: 10rem;
 }
 
 .footer--path{
     stroke: none;
      fill: #ffffff;
+}
+
+.correo--container{
+    display: flex;
+    flex-direction: column;
 }
 
 .correo--container input{
@@ -393,11 +402,76 @@ footer{
     border-radius: 1rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.453);
     font-size: 1.5rem;
-    font-family: var(--secondFont);
+    font-family: var(--ThreeFont);
+    color: var(--ColorGray);
+}
+
+.correo--container p{
+    font-size: 1.3rem;
+    width: 25rem;
+    color: var(--purple);
 }
 
 .correo--container input[type]:focus{
     border-color: rgb(255, 144, 0);
-    box-shadow: 0 1px 1px rgba(229, 103, 23, 0.075)inset, 0 0 8px rgba(175, 87, 180, 0.6);
+    box-shadow: 0 1px 1px rgba(229, 103, 23, 0.075)inset, 0 0 4px rgba(54, 17, 89, 0.339);
     outline: 0 none;
+}
+
+.button--purple3{
+    width: 4rem;
+    font-size: 2.3rem;
+    border-radius: 1rem;    
+}
+
+.pagos--container{
+    display: flex;
+    flex-direction: column;
+    padding: 3rem 0;
+    width: 100%;
+    height: 10rem;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.532);
+}
+
+.pagos--container img{
+    height: 3rem;
+}
+
+.pagos--container--img1{
+    width: 10rem;
+}
+
+.pagos--container--img2{
+    width: 3.5rem;
+}
+
+.pagos--container--img3{
+    width: 8rem;
+}
+
+.pagos--img{
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    margin-top: 2rem;
+}
+
+.pagos--container h3{
+    font-size: 2.5rem;
+    text-align: center;
+    margin: 0;
+    color: var(--purple);
+}
+
+.redes--container{
+    padding: 3rem 0;
+    font-size: 3.4rem;
+    color: var(--purple);
+    display: flex;
+    gap: 8rem;
+}
+
+.derechos{
+    color: var(--purple);
+    font-size: 1.2rem;
 }
